# gsplat

./: .buildinfo  .clang-format  .clangd  .clangd_template  .coderabbit.yaml  .dockerignore  .gersemirc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  CMakeLists.txt  CMakePresets.json  CNAME  Dockerfile  EXPLORATION.md  LICENSE  LOG.md  MANIFEST.in  NRE_BUILD.md  README.md  README_EN.md  README_Setup.md  README_v2.md  benchmark_adaptive.py  bindings.py  bootstrap.sh  config.yaml  conftest.py  dino_plots.ipynb  environment.yml  ext_test.ipynb  extract_dtu.sh  formatter.sh  genindex.html  get_cuda_arch_list.py  index.html  (+23 more)
compression/: CMakeLists.txt  GPU_OCTREE_README.md  install_dependencies.sh
compression/include/: compression.h  utils.h
compression/src/: draco_compression.cpp  gpu_octree.cpp  gpu_octree_compression.cpp  main.cpp  open3d_compression.cpp  pcl_compression.cpp  timer.cpp  utils.cpp
csrc/: CMakeLists.txt  backward.cu  backward.cuh  backward_ref.cu  backward_ref.cuh  bindings.cu  bindings.h  check_ref_backward.cu  check_serial_backward.cu  check_serial_forward.cu  config.h  debug_utils.cpp  debug_utils.h  ext.cpp  forward.cu  forward.cuh  forward.h  helpers.cuh  helpers.h  main.cpp  main.cu  rasterize.cu  rasterize.h  serial_backward.cu  serial_backward.cuh  sh.cuh  test_backward.cu  test_forward.cu  tgaimage.cpp  tgaimage.h
csrc/reference/: ext.cpp  rasterize_points.cu
gsplat/: CMakeLists.txt  __init__.py  _gaussian.py  _helper.py  _helper_v2.py  _lazy_backend.py  _quat_math.py  _strategy.py  _torch_impl.py  _torch_impl_v2.py  _wrapper_v2.py  bin_and_sort_gaussians.py  camera.py  color_correct.py  color_utils.py  compute_cumulative_intersects.py  constants.py  core.py  cov2d_bounds.py  distributed.py  exporter.py  gaussians.py  get_tile_bin_edges.py  init_utils.py  losses.py  losses_depth.py  losses_fused.py  map_gaussian_to_intersects.py  nd_rasterize.py  normal_utils.py  ops.py  point_utils.py  profile.py  project_gaussians.py  rasterize.py  rasterize_forward_kernel.py  regularizers.py  relocation.py  rendering.py  rendering_inria.py  (+9 more)
gsplat/build_support/: bootstrap_support.py  cupy_requirement.py  environment_check.py  gsplat_git_sdist_backend.py  pyproject_metadata.py  wheel_build_metadata.py
gsplat/compression/: __init__.py  _png_dependencies.py  compress.py  png_compression.py  sort.py
gsplat/contrib/: __init__.py
gsplat/cuda/: CMakeLists.txt  __init__.py  _backend.py  _constants.py  _lidar.py  _losses_wrapper.py  _math.py  _torch_cameras.py  _torch_external_distortion.py  _torch_impl.py  _torch_impl_2dgs.py  _torch_impl_eval3d.py  _torch_impl_lidar.py  _torch_impl_ut.py  _torch_lidars.py  _wrapper.py  build.py  ext.cpp
gsplat/cuda2/: _backend.py
gsplat/cuda_legacy/: __init__.py  _backend.py  _torch_impl.py  _wrapper.py  project_gaussians.py  rasterize.py  sh.py
gsplat/cuda_v2/: _backend.py
gsplat/experimental/: CMakeLists.txt  __init__.py  example.py  profile.py  profiling.py  test.py
gsplat/geometry/: __init__.py  design.md
gsplat/hip/: ext.cpp
gsplat/mps/: __init__.py  _backend.py  _wrapper.py
gsplat/nht/: __init__.py  _fused_train.py  _inference_renderer.py  _rendering.py  _wrapper.py  deferred_shader.py  exporter.py  strategy.py
gsplat/optimizers/: __init__.py  selective_adam.py
gsplat/scene/: CMakeLists.txt  __init__.py  design-bg-env-map.md  design-transforms.md  design.md  transforms.py
gsplat/sensors/: __init__.py  design-functional.md  design-kernels.md  design-models.md  design.md
gsplat/stage/: __init__.py  design.md
gsplat/strategy/: __init__.py  adaptive.py  base.py  convex_splatting.py  default.py  mcmc.py  null.py  ops.py  ops_convex.py  scaffold.py  sort.py
gsplat/training/: __init__.py  schedulers.py
gsplat/util/: camera_utils.py  lib_bilagrid.py  normal_utils.py
gsplat/utils/: camera_utils.py  color_utils.py  normal_utils.py
libs/scene/: __init__.py  design.md  pyproject.toml  sh_compression.py  test_package_imports.py
libs/sensors/: __init__.py  conftest.py  design-functional.md  design-kernels.md  design-models.md  design.md  implementation_plan.md  pyproject.toml
tests/: CMakeLists.txt  README.md  _backend_collect.py  _cuda.py  _package_paths.py  _test_distributed.py  _test_eval3d.py  av_helpers.py  clang_format.sh  compare_reference.py  conftest.py  dist.py  dist2.py  exp.py  gsplat-test.py  playground.py  ref_trainer.py  run_tests.sh  simple_trainer.py  simple_trainer_compare.py  sparse_test_helpers.py  test_2d_splat.py  test_2dgs.py  test_2dgs_scene_integration.py  test_3dgut.py  test_assert_close_with_boundary_band.py  test_assert_grad_reference_close.py  test_assert_grad_sparsity.py  test_av_example.py  test_av_scene_wrapper.py  test_basic.py  test_bg_grid_losses_fused.py  test_bg_track_node_semantic_fused.py  test_bin_and_sort_gaussians.py  test_bindings.py  test_bindings_backward.py  test_bindings_forward.py  test_cameras.py  test_compression.py  test_contrib_deformnet.py  (+51 more)
tests/citygs/: conftest.py  test_assign.py  test_contraction.py  test_dataset.py  test_manifest.py  test_merge_ckpt.py  test_partition.py  test_scheduler.py
tests/cmake/: GSplatCCacheTest.cmake  GSplatCudaArchBuildTest.cmake  GSplatCudaArchTest.cmake  GSplatCudaArtifactTest.cmake  GSplatProjectInfoTest.cmake  GSplatPytestConfigTest.cmake  GSplatTorchCudaTest.cmake  GSplatTorchPrefixTest.cmake
tests/core/: _test_distributed.py  av_helpers.py  conftest.py  sparse_test_helpers.py  test_2dgs.py  test_2dgs_scene_integration.py  test_assert_close_with_boundary_band.py  test_assert_grad_reference_close.py  test_av_example.py  test_av_scene_wrapper.py  test_basic.py  test_bg_grid_losses_fused.py  test_bg_track_node_semantic_fused.py  test_build_support.py  test_cameras.py  test_compression.py  test_contrib_dynamic_strategy.py  test_contrib_regulation.py  test_dataset_endonerf.py  test_deform_smoothness_gaussian_fused.py  test_dynamic_surgical_trainer.py  test_ensure_shape.py  test_expect_helpers.py  test_external_distortion.py  test_ftheta.py  (+22 more)
(+1797 files in other folders)
