# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
# The backend itself imports packaging and, below Python 3.11, tomli; declare
# them instead of relying on scikit-build-core's transitive dependencies.
requires = [
    "scikit-build-core>=1.0",
    "packaging>=21.3",
    'tomli>=1.2; python_version < "3.11"',
]
build-backend = "gsplat_git_sdist_backend"
backend-path = ["gsplat/build_support"]

[project]
name = "gsplat"
description = "Python package for differentiable rasterization of gaussians"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version", "dependencies"]
keywords = ["gaussian", "splatting", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "jaxtyping",
    "nvtx",
    "rich>=12",
    # Blackwell (sm_120) support requires PyTorch 2.7 or newer.
    "torch>=2.7",
]

[project.optional-dependencies]
lidar = [
    "scipy",
]
examples = [
    "Pillow",
    "tqdm",
    "tyro",
    "matplotlib",
    "imageio>=2.37.2",
]
png = [
    "imageio>=2.37.2",
    "torchpq>=0.3.0.6",
    "vc-flas>=0.1.7",
]
test = [
    "gsplat[png]",
    "pytest>=8.3.5",
    "pytest-check",
    # Test collection imports the EndoNeRF dataset and dynamic-surgical
    # trainer, which require these example dependencies at module import time.
    "Pillow",
    "tqdm",
    "tyro",
    "scipy",
    "scikit-learn",
    "opencv-python-headless",
    "nerfacc>=0.5.3",
]
# Development dependencies. Install with `pip install gsplat[dev]`. CuPy is
# intentionally absent: its wheel name depends on the local CUDA toolkit and
# is resolved dynamically by gsplat/build_support/cupy_requirement.py.
dev = [
    "gsplat[test]",
    "cmake>=3.26",
    "ninja>=1.5",
    # Parsing the project metadata outside pip's build isolation needs these.
    "packaging>=21.3",
    'tomli>=1.2; python_version < "3.11"',
    # Formatters define canonical source output, so their versions are exact.
    "black==22.3.0",
    "clang-format==22.1.5",
    "gersemi==0.27.7",
    "isort==5.10.1",
    "pylint>=2.13.4",
    "pytest-env",
    "pytest-xdist>=2.5.0",
    "typeguard>=2.13.3",
    "pyyaml>=6.0.1",
    "build",
    "twine",
]

[project.scripts]
gsplat-test = "gsplat._test:main"

[project.urls]
Homepage = "https://github.com/nerfstudio-project/gsplat"
Repository = "https://github.com/nerfstudio-project/gsplat"
Documentation = "https://docs.gsplat.studio"

[tool.scikit-build]
minimum-version = "build-system.requires"
build.verbose = false
ninja.version = ">=1.5"

[[tool.dynamic-metadata]]
provider = "scikit_build_core.metadata.regex"
field = "version"
input = "gsplat/version.py"

[[tool.dynamic-metadata]]
provider = { path = "gsplat/build_support", module = "wheel_build_metadata:WheelBuildMetadataProvider" }

[tool.scikit-build.cmake]
version = ">=3.26"
source-dir = "."
# Torch requires TORCH_CUDA_ARCH_LIST, but CMake generates the final NVCC
# architecture flags. CMAKE_CUDA_ARCHITECTURES has priority; otherwise users
# may set TORCH_CUDA_ARCH_LIST directly.
# The project default targets native GPUs. The full-release preset requests
# the distribution architecture set, filtered to targets supported by the
# toolkit.

[tool.scikit-build.install]
components = ["gsplat_runtime", "gsplat_tests"]

[tool.scikit-build.wheel]
packages = ["gsplat"]
exclude = [
    "gsplat/**/CMakeLists.txt",
    "gsplat/cuda/csrc/**",
    "gsplat/geometry/kernels/cuda/**",
    "gsplat/sensors/kernels/cuda/**",
    "gsplat/scene/kernels/cuda/**",
    "gsplat/experimental/render/kernels/cuda/**",
]
